@@ -50,7 +50,7 @@ public class SingleAttributeFilter extends AbstractAttributeFilterCondition {
 	public void init(ParameterHandler operator) throws UserError, ConditionCreationException {
 		attributeName = operator.getParameterAsString(PARAMETER_ATTRIBUTE);
 		if ((attributeName == null) || (attributeName.length() == 0))
-			throw new UserError((operator instanceof Operator) ? (Operator) operator: null, 904, "The condition for a single attribute needs a non-empty attribute parameter string.");
+			throw new UserError((operator instanceof Operator) ? (Operator) operator: null, 904, "The condition for a single attribute needs a non-empty attribute parameter string.", "");
 	}
 
 	public MetaDataInfo isFilteredOutMetaData(AttributeMetaData attribute, ParameterHandler handler) throws ConditionCreationException {
