@@ -11,6 +11,7 @@ Changes from RapidMiner 5.2.8 to 5.3.0
 * New operator: Throw Exception
 * New file system operators: Copy File, Move File, Delete File, Rename File, Create Directory
 * Aggregate: new aggregation functions: sum (fractional), count (fractional), count (percentage) and string concatenation
+* Loop Attributes has a new output port which collects the data from all iterations 
 * Result Perspective: Added button in top right corner of a result tab to close all open results at once
 * Added new view: 'Macros': This view shows macros and their values in real time during process execution
 * Added resize button to text parameter editor dialog
